--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <div class="row">
                 <div class="col-10">
                   <ul class="main-menu">
-                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home11111111111111</a></li>
                     <li><a href="shop-grid.html">Shop</a></li>
                     <li><a href="services.html ">Services</a>
                       <ul class="sub-menu two-col">
