--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <link href="assets/css/style.css?v=3.0.0" rel="stylesheet">
   <title>Home - WYS WYG</title>
 </head>
-
+<style>
+  .list-9-col li{
+    min-width: 150px;
+  }
+</style>
 <body>
   <!-- <div id="preloader-active">
       <div class="preloader d-flex align-items-center justify-content-center">
