--- a/index.html
+++ b/index.html
@@ -835,37 +835,75 @@
     </div>
     
     <style>
-      @media (max-width: 767px) {
-  .sticky-bar .container {
-    display: flex;
-    flex-direction: column;
+      /* Ensure the main header does not interfere with mobile menu */
+.header {
+  position: relative;
+}
+
+/* For mobile view, adjust the position of the dropdown menu */
+@media (max-width: 991px) {
+  .sticky-bar {
+    position: relative;
   }
 
-  /* Move the burger menu to the top */
-  .burger-menu {
-    order: -1; /* This makes sure the mobile menu appears first */
+  /* Move mobile menu (burger icon) and related items to the top */
+  .header-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999; /* Make sure it's on top */
   }
 
-  /* Style the mobile menu when active */
   .burger-icon {
     display: block;
-    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    z-index: 10000;
   }
 
-  .header-nav {
-    display: none; /* Hide the main menu on mobile */
+  /* Ensure the dropdown (language, address, etc.) menus are aligned at the top */
+  .dropdown-menu-address,
+  .dropdown-menu-light {
+    position: absolute;
+    top: 50px; /* Adjust this value to place the menu below the header */
+    left: 0;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 20px;
+  }
+
+  /* Adjust padding and other properties for better mobile layout */
+  .dropdown-menu-light {
+    padding: 15px;
   }
   
-  .header-bottom {
-    display: none; /* Hide the bottom menu on mobile */
+  .dropdown-menu-address {
+    padding: 20px;
   }
 
-  /* For mobile navigation dropdown */
-  .header-nav-mobile {
+  /* Adjust mobile menu items layout */
+  .header-left, .header-shop {
     display: block;
-    background-color: #fff;
     width: 100%;
-    text-align: center;
+  }
+
+  .main-header {
+    padding-top: 10px;
+  }
+
+  /* Modify the cart and account icons if needed for mobile */
+  .box-dropdown-cart,
+  .dropdown-account {
+    display: none; /* Hide dropdown items on mobile for simplicity */
+  }
+
+  /* Adjust the position of the search bar */
+  .header-search {
+    margin-top: 10px;
+    width: 100%;
   }
 }
 
