--- a/index.html
+++ b/index.html
@@ -835,7 +835,11 @@
     </div>
     
     <style>
-      
+      .menu-icon {
+   position: fixed;
+   top: 10px;
+   right: 10px;
+}
       /* Add styles for consistent width and height */
 .list-9-col {
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Adjust number of items per row */
