--- a/index.html
+++ b/index.html
@@ -841,8 +841,8 @@
    right: 10px;
 }
       /* Add styles for consistent width and height */
-.list-9-col {
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Adjust number of items per row */
+/* .list-9-col {
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 20px;
   list-style-type: none;
   margin: 0;
@@ -869,8 +869,8 @@
 }
 
 .box-category img {
-  width: 100px; /* Set consistent image size */
-  height: 100px; /* Set consistent image size */
+  width: 100px;
+  height: 100px; 
   object-fit: cover;
 }
 
@@ -890,7 +890,7 @@
 .text-info p {
   font-size: 14px;
   color: #777;
-}
+} */
 
     </style>
     <section class="section-box mt-30">
